<resources>
    <string name="app_name">TwoTouchMail</string>
    <string name="button_pickup">迎えに来て</string>
    <string name="button_no_dinner">飯いらない</string>
    <string name="button_send">送信</string>
    <string name="subject">件名</string>
    <string name="place">場所</string>
    <string name="station">駅</string>
    <string name="school">学校</string>
    <string name="always">いつもの場所</string>
    <string name="mail_to">aaaaaa</string>
</resources>
